# databaset

./: LICENSE  README.md
javascript/: README.md  package.json
javascript/examples/: smoke.mjs
javascript/src/: client.js  errors.js  index.js  memory.js
python/: README.md  pyproject.toml
python/databaset/: __init__.py  client.py  errors.py  memory.py
python/databaset.egg-info/: PKG-INFO  SOURCES.txt
python/examples/: smoke_test.py
